# stream-energy-test-task

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  security.py
app/alembic/: env.py
app/api/: users.py
app/common/: startup.py
app/database/: db.py  user.py
app/models/note/: note_model.py
app/models/user/: user_model.py
