[tool.poetry]
name = "stream-energy-test-task"
version = "0.1.0"
description = ""
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
pyjwt = "^2.9.0"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
aiogram = "^3.13.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.5.2"
uuid7 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
